--- a/src/styles/articles.module.scss
+++ b/src/styles/articles.module.scss
@@ -43,7 +43,7 @@
   .main {
     grid-template-columns: 1fr;
     align-items: center;
-    padding: 3rem 1rem 0;
+    padding: 3rem 0rem 0;
     .sidebar {
       width: 100%;
       padding: 0;
