--- a/src/styles/author.module.scss
+++ b/src/styles/author.module.scss
@@ -140,6 +140,7 @@
 
 @media screen and (max-width: 481px) {
   .main {
+    height: 100%;
     .authorBio {
       width: 100%;
       height: 100%;
